Criar site institucional do OBSERVA

--- a/acessibilidade-etica.html
+++ b/acessibilidade-etica.html
@@ -9,64 +9,65 @@
   <body>
     <header>
       <div class="container nav">
-        <div>
+        <div class="brand">
           <strong>OBSERVA</strong>
-          <div class="small-text">Observação organizada para cuidar, educar e planejar</div>
+          <span class="small-text">Observação organizada para cuidar, educar e planejar</span>
         </div>
         <nav class="nav-links">
           <a href="index.html">Início</a>
           <a href="sobre.html">Sobre</a>
+          <a href="como-funciona.html">Como funciona</a>
           <a href="acessibilidade-etica.html">Ética e acessibilidade</a>
-          <a href="formularios/familia.html">Formulários</a>
+          <a href="formularios/index.html">Formulários</a>
         </nav>
       </div>
     </header>
 
     <main class="container">
-      <section>
-        <h1>Ética e acessibilidade</h1>
+      <section class="hero">
+        <span class="badge">Compromisso institucional</span>
+        <h1>Ética, acessibilidade e cuidado</h1>
         <p>
-          O OBSERVA foi criado para apoiar decisões educacionais com respeito, privacidade e responsabilidade.
+          O OBSERVA foi concebido para apoiar práticas educativas com respeito à diversidade, ao contexto e à
+          proteção das informações.
         </p>
       </section>
 
       <section>
-        <h2>Não realização de diagnóstico</h2>
-        <p>
-          As observações organizadas pelo OBSERVA não têm finalidade diagnóstica. Elas são registros
-          educacionais e devem ser usadas com cautela e contexto.
-        </p>
+        <h2>Princípios éticos</h2>
+        <div class="grid grid-2">
+          <div class="card">
+            <h3>Respeito à criança</h3>
+            <p>
+              As observações devem considerar o contexto, a faixa etária e o ritmo individual de cada criança.
+            </p>
+          </div>
+          <div class="card">
+            <h3>Não diagnóstico</h3>
+            <p>O sistema não emite laudos e não substitui avaliações clínicas.</p>
+          </div>
+        </div>
       </section>
 
       <section>
-        <h2>Uso educacional das informações</h2>
+        <h2>Acessibilidade e linguagem clara</h2>
         <p>
-          As informações coletadas orientam planejamentos pedagógicos e comunicam avanços do cotidiano. O foco
-          é o cuidado e a aprendizagem, nunca a rotulação.
+          O conteúdo é apresentado de forma simples, com tipografia sem serifa e organização em coluna única,
+          para facilitar a leitura em diferentes dispositivos.
         </p>
+        <div class="info-box success">
+          <p>
+            Se precisar de ajustes de acessibilidade, a equipe do sistema pode adaptar conteúdos conforme a
+            necessidade institucional.
+          </p>
+        </div>
       </section>
 
       <section>
-        <h2>Consentimento e LGPD</h2>
+        <h2>Uso responsável dos dados</h2>
         <p>
-          O OBSERVA incentiva o consentimento informado e o tratamento responsável de dados. Qualquer uso de
-          informações pessoais deve seguir a LGPD e as políticas da instituição.
-        </p>
-      </section>
-
-      <section>
-        <h2>Linguagem clara</h2>
-        <p>
-          Priorizamos textos simples, acessíveis e acolhedores para que todas as pessoas compreendam os
-          objetivos da observação.
-        </p>
-      </section>
-
-      <section>
-        <h2>Compromisso com acessibilidade digital</h2>
-        <p>
-          O OBSERVA busca ser utilizável em diferentes dispositivos, com leitura confortável e navegação
-          intuitiva. Ajustes contínuos serão feitos para ampliar a inclusão.
+          As informações registradas são utilizadas para gerar relatórios descritivos enviados por e-mail às
+          pessoas indicadas no formulário. O objetivo é apoiar o acompanhamento educacional.
         </p>
       </section>
     </main>
@@ -74,13 +75,12 @@
     <footer>
       <div class="container">
         <p class="small-text">
-          O OBSERVA é uma ferramenta educacional. As observações não possuem finalidade diagnóstica e não
-          substituem avaliações clínicas.
+          O OBSERVA é uma ferramenta educacional. As observações não possuem finalidade diagnóstica.
         </p>
         <div class="footer-links">
-          <a href="index.html">Início</a>
           <a href="sobre.html">Sobre</a>
-          <a href="formularios/educacao-infantil.html">Formulários</a>
+          <a href="como-funciona.html">Como funciona</a>
+          <a href="formularios/index.html">Formulários</a>
         </div>
       </div>
     </footer>
