Criar site institucional do ENTRELAÇOS

--- a/acessibilidade-etica.html
+++ b/acessibilidade-etica.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ética e acessibilidade | OBSERVA</title>
+    <title>Ética e acessibilidade | ENTRELAÇOS</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <div class="container nav">
         <div class="brand">
-          <strong>OBSERVA</strong>
-          <span class="small-text">Observação organizada para cuidar, educar e planejar</span>
+          <strong>ENTRELAÇOS</strong>
+          <span class="small-text">Observação que conecta família e escola</span>
         </div>
         <nav class="nav-links">
           <a href="index.html">Início</a>
@@ -28,7 +28,7 @@
         <span class="badge">Compromisso institucional</span>
         <h1>Ética, acessibilidade e cuidado</h1>
         <p>
-          O OBSERVA foi concebido para apoiar práticas educativas com respeito à diversidade, ao contexto e à
+          ENTRELAÇOS foi concebido para apoiar práticas educativas com respeito à diversidade, ao contexto e à
           proteção das informações.
         </p>
       </section>
@@ -39,12 +39,12 @@
           <div class="card">
             <h3>Respeito à criança</h3>
             <p>
-              As observações devem considerar o contexto, a faixa etária e o ritmo individual de cada criança.
+              As observações consideram o contexto, a faixa etária e o ritmo individual de cada criança.
             </p>
           </div>
           <div class="card">
             <h3>Não diagnóstico</h3>
-            <p>O sistema não emite laudos e não substitui avaliações clínicas.</p>
+            <p>A plataforma não emite laudos e não substitui avaliações clínicas.</p>
           </div>
         </div>
       </section>
@@ -52,12 +52,12 @@
       <section>
         <h2>Acessibilidade e linguagem clara</h2>
         <p>
-          O conteúdo é apresentado de forma simples, com tipografia sem serifa e organização em coluna única,
-          para facilitar a leitura em diferentes dispositivos.
+          O conteúdo é apresentado de forma simples, com tipografia sem serifa e organização em coluna única, para
+          facilitar a leitura em diferentes dispositivos.
         </p>
         <div class="info-box success">
           <p>
-            Se precisar de ajustes de acessibilidade, a equipe do sistema pode adaptar conteúdos conforme a
+            Se precisar de ajustes de acessibilidade, a equipe do ENTRELAÇOS pode adaptar conteúdos conforme a
             necessidade institucional.
           </p>
         </div>
@@ -75,7 +75,7 @@
     <footer>
       <div class="container">
         <p class="small-text">
-          O OBSERVA é uma ferramenta educacional. As observações não possuem finalidade diagnóstica.
+          ENTRELAÇOS é uma ferramenta educacional. As observações não possuem finalidade diagnóstica.
         </p>
         <div class="footer-links">
           <a href="sobre.html">Sobre</a>
