--- a/como-funciona.html
+++ b/como-funciona.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Como funciona | OBSERVA</title>
+    <title>Como funciona | ENTRELAÇOS</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <div class="container nav">
         <div class="brand">
-          <strong>OBSERVA</strong>
-          <span class="small-text">Observação organizada para cuidar, educar e planejar</span>
+          <strong>ENTRELAÇOS</strong>
+          <span class="small-text">Observação que conecta família e escola</span>
         </div>
         <nav class="nav-links">
           <a href="index.html">Início</a>
@@ -26,18 +26,18 @@
     <main class="container">
       <section class="hero">
         <span class="badge">Fluxo de trabalho</span>
-        <h1>Como funciona o OBSERVA</h1>
+        <h1>Como funciona o ENTRELAÇOS</h1>
         <p>
-          O sistema organiza observações para apoiar o planejamento pedagógico e o cuidado, sempre com linguagem
-          ética e contextualizada.
+          A plataforma organiza observações para apoiar o planejamento pedagógico e o cuidado, sempre com linguagem
+          humana, clara e acolhedora.
         </p>
       </section>
 
       <section>
-        <h2>Quem pode preencher</h2>
+        <h2>Quem pode responder</h2>
         <p>
-          Os formulários podem ser preenchidos por famílias, professores, cuidadores e equipes escolares, de
-          acordo com a finalidade de cada instrumento.
+          Os formulários podem ser preenchidos por famílias, professores, cuidadores e equipes escolares, de acordo
+          com a finalidade de cada instrumento.
         </p>
       </section>
 
@@ -53,11 +53,18 @@
           <div class="card">
             <h3>Relatórios descritivos</h3>
             <p>
-              As informações são transformadas em relatórios descritivos, enviados por e-mail às pessoas
-              indicadas no formulário.
+              As informações são transformadas em relatórios descritivos e enviados por e-mail às pessoas indicadas.
             </p>
           </div>
         </div>
+      </section>
+
+      <section>
+        <h2>Envio do relatório por e-mail</h2>
+        <p>
+          Após o preenchimento, um relatório é gerado e enviado por e-mail para os responsáveis indicados. Isso
+          garante transparência e fortalece o diálogo entre casa e escola.
+        </p>
       </section>
 
       <section>
@@ -68,24 +75,15 @@
         </p>
         <div class="info-box warning">
           <strong>Importante:</strong>
-          <p>O OBSERVA não realiza diagnósticos.</p>
+          <p>A plataforma ENTRELAÇOS não realiza diagnósticos.</p>
         </div>
-      </section>
-
-      <section>
-        <h2>Envio do relatório por e-mail</h2>
-        <p>
-          Após o preenchimento, um relatório descritivo é gerado e enviado por e-mail para os responsáveis
-          indicados. Isso garante transparência e permite que todos acompanhem o desenvolvimento de forma
-          colaborativa.
-        </p>
       </section>
     </main>
 
     <footer>
       <div class="container">
         <p class="small-text">
-          O OBSERVA é uma ferramenta educacional. As observações não possuem finalidade diagnóstica.
+          ENTRELAÇOS é uma ferramenta educacional. As observações não possuem finalidade diagnóstica.
         </p>
         <div class="footer-links">
           <a href="sobre.html">Sobre</a>
