--- a/formularios/index.html
+++ b/formularios/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Formulários | OBSERVA</title>
+    <title>Formulários | ENTRELAÇOS</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
       <div class="container nav">
         <div class="brand">
-          <strong>OBSERVA</strong>
-          <span class="small-text">Observação organizada para cuidar, educar e planejar</span>
+          <strong>ENTRELAÇOS</strong>
+          <span class="small-text">Observação que conecta família e escola</span>
         </div>
         <nav class="nav-links">
           <a href="../index.html">Início</a>
@@ -35,10 +35,7 @@
 
       <section>
         <div class="info-box warning">
-          <p>
-            Este sistema está em constante evolução. Novos formulários poderão ser adicionados conforme as
-            necessidades educacionais.
-          </p>
+          <p>Novos formulários poderão ser adicionados futuramente.</p>
         </div>
       </section>
 
