--- a/formularios/marcos-desenvolvimento-0-3.html
+++ b/formularios/marcos-desenvolvimento-0-3.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Marcos do Desenvolvimento (0–3) | OBSERVA</title>
+    <title>Marcos do Desenvolvimento (0–3) | ENTRELAÇOS</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
       <div class="container nav">
         <div class="brand">
-          <strong>OBSERVA</strong>
-          <span class="small-text">Observação organizada para cuidar, educar e planejar</span>
+          <strong>ENTRELAÇOS</strong>
+          <span class="small-text">Observação que conecta família e escola</span>
         </div>
         <nav class="nav-links">
           <a href="../index.html">Início</a>
@@ -40,7 +40,7 @@
           <dt>Relatório destinado a</dt>
           <dd>Família e escola indicadas no preenchimento</dd>
           <dt>Documentos-base</dt>
-          <dd>Caderneta da Criança, Guia MS, OMS, BNCC</dd>
+          <dd>Caderneta da Criança, BNCC, orientações oficiais de desenvolvimento infantil</dd>
           <dt>Finalidade</dt>
           <dd>Organizar observações do desenvolvimento inicial com base em referências oficiais.</dd>
           <dt>Funcionalidade da informação</dt>
@@ -50,7 +50,7 @@
 
       <section>
         <div class="info-box success">
-          <p>Após o preenchimento, um relatório será gerado e enviado por e-mail.</p>
+          <p>Após o preenchimento, um relatório será enviado por e-mail.</p>
         </div>
         <div class="info-box warning">
           <p>Este formulário não possui finalidade diagnóstica.</p>
@@ -58,8 +58,8 @@
       </section>
 
       <section>
-        <a class="button" href="#" data-alert="Formulário disponível em breve">
-          Acessar formulário (em breve)
+        <a class="button" href="#" data-alert="Formulário em breve. Em breve disponibilizaremos o link.">
+          Formulário em breve
         </a>
       </section>
     </main>
@@ -67,7 +67,7 @@
     <footer>
       <div class="container">
         <p class="small-text">
-          O OBSERVA apoia registros observacionais. Nenhuma informação substitui avaliação clínica.
+          ENTRELAÇOS apoia registros observacionais. Nenhuma informação substitui avaliação clínica.
         </p>
         <div class="footer-links">
           <a href="index.html">Formulários</a>
