--- a/formularios/observacao-pedagogica-continua.html
+++ b/formularios/observacao-pedagogica-continua.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Observação Pedagógica Contínua | OBSERVA</title>
+    <title>Observação Pedagógica Contínua | ENTRELAÇOS</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
       <div class="container nav">
         <div class="brand">
-          <strong>OBSERVA</strong>
-          <span class="small-text">Observação organizada para cuidar, educar e planejar</span>
+          <strong>ENTRELAÇOS</strong>
+          <span class="small-text">Observação que conecta família e escola</span>
         </div>
         <nav class="nav-links">
           <a href="../index.html">Início</a>
@@ -50,7 +50,7 @@
 
       <section>
         <div class="info-box success">
-          <p>Após o preenchimento, um relatório será gerado e enviado por e-mail.</p>
+          <p>Após o preenchimento, um relatório será enviado por e-mail.</p>
         </div>
         <div class="info-box warning">
           <p>Este formulário não possui finalidade diagnóstica.</p>
@@ -58,8 +58,8 @@
       </section>
 
       <section>
-        <a class="button" href="#" data-alert="Formulário disponível em breve">
-          Acessar formulário (em breve)
+        <a class="button" href="#" data-alert="Formulário em breve. Em breve disponibilizaremos o link.">
+          Formulário em breve
         </a>
       </section>
     </main>
