--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OBSERVA | Observação organizada para cuidar, educar e planejar</title>
+    <title>ENTRELAÇOS | Observação que conecta família e escola</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header>
       <div class="container nav">
         <div class="brand">
-          <strong>OBSERVA</strong>
-          <span class="small-text">Observação organizada para cuidar, educar e planejar</span>
+          <strong>ENTRELAÇOS</strong>
+          <span class="small-text">Observação que conecta família e escola</span>
         </div>
         <nav class="nav-links">
           <a href="index.html">Início</a>
@@ -25,45 +25,45 @@
 
     <main class="container">
       <section class="hero">
-        <span class="badge">Sistema institucional</span>
-        <h1>OBSERVA</h1>
+        <span class="badge">Plataforma institucional</span>
+        <h1>ENTRELAÇOS</h1>
         <p>
-          Uma plataforma de observação estruturada do desenvolvimento infantil e do percurso escolar, com base
-          na BNCC e em documentos oficiais.
+          Observação estruturada que organiza informações do cotidiano infantil e do percurso escolar, respeitando
+          a faixa etária e o contexto de cada criança.
         </p>
         <a class="button" href="formularios/index.html">Ver formulários disponíveis</a>
       </section>
 
       <section>
-        <h2>Propósito do sistema</h2>
+        <h2>Para quem é</h2>
         <p>
-          O OBSERVA organiza informações do cotidiano da criança com respeito à faixa etária, ao contexto e às
-          práticas educativas. O sistema não realiza diagnósticos e não substitui avaliações clínicas.
+          ENTRELAÇOS fortalece a comunicação entre família e escola com linguagem clara e acolhedora.
         </p>
-        <div class="info-box warning">
-          <strong>Importante:</strong>
-          <p>
-            Após o preenchimento dos formulários, os dados são transformados em relatórios descritivos que serão
-            enviados por e-mail às pessoas indicadas.
-          </p>
+        <div class="grid grid-2">
+          <a class="card audience-card family" href="formularios/index.html">
+            <h3>Sou família</h3>
+            <p>Compartilhe observações do cotidiano e receba relatórios por e-mail para acompanhar a trajetória.</p>
+            <span class="small-text">Acesse os formulários pensados para o contexto familiar.</span>
+          </a>
+          <a class="card audience-card educator" href="formularios/index.html">
+            <h3>Sou educador(a)</h3>
+            <p>Registre observações pedagógicas e organize informações para planejamento escolar.</p>
+            <span class="small-text">Encontre formulários alinhados à BNCC e ao percurso escolar.</span>
+          </a>
         </div>
       </section>
 
       <section>
-        <h2>Para quem é</h2>
-        <div class="grid grid-3">
-          <div class="card">
-            <h3>Famílias</h3>
-            <p>Para registrar observações do cotidiano e fortalecer o diálogo com a escola.</p>
-          </div>
-          <div class="card">
-            <h3>Escolas e professores</h3>
-            <p>Para planejar ações pedagógicas com dados organizados e contextualizados.</p>
-          </div>
-          <div class="card">
-            <h3>Profissionais</h3>
-            <p>Para apoiar o acompanhamento educacional com base em observações éticas.</p>
-          </div>
+        <h2>Relatórios por e-mail</h2>
+        <p>
+          Após o preenchimento, os dados são transformados em relatórios descritivos enviados por e-mail às pessoas
+          indicadas no formulário.
+        </p>
+        <div class="info-box warning">
+          <strong>Importante:</strong>
+          <p>
+            A plataforma ENTRELAÇOS não realiza diagnósticos e não substitui avaliações clínicas.
+          </p>
         </div>
       </section>
 
@@ -78,19 +78,17 @@
           <span>→</span>
           <span>Relatar</span>
           <span>→</span>
-          <span>Planejar</span>
+          <span>Conectar</span>
         </div>
         <p>
-          Cada formulário foi pensado para respeitar a idade da criança e orientar o registro de informações que
-          sustentam decisões educacionais.
+          Cada formulário foi pensado para respeitar a idade da criança e fortalecer o diálogo entre casa e escola.
         </p>
       </section>
 
       <section>
         <h2>Formulários disponíveis</h2>
         <p>
-          Os formulários são organizados por finalidade e faixa etária. Todos são observacionais e não
-          diagnósticos.
+          Os formulários são organizados por finalidade e faixa etária, sempre com caráter observacional.
         </p>
         <a class="button" href="formularios/index.html">Acessar lista completa</a>
       </section>
@@ -99,8 +97,7 @@
     <footer>
       <div class="container">
         <p class="small-text">
-          O OBSERVA é uma ferramenta educacional. As observações não possuem finalidade diagnóstica e não
-          substituem avaliações clínicas.
+          ENTRELAÇOS é uma ferramenta educacional. As observações não possuem finalidade diagnóstica.
         </p>
         <div class="footer-links">
           <a href="sobre.html">Sobre</a>
