--- a/formularios/comunicacao-linguagem.html
+++ b/formularios/comunicacao-linguagem.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Comunicação e Linguagem | OBSERVA</title>
+    <title>Comunicação e Linguagem | ENTRELAÇOS</title>
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
       <div class="container nav">
         <div class="brand">
-          <strong>OBSERVA</strong>
-          <span class="small-text">Observação organizada para cuidar, educar e planejar</span>
+          <strong>ENTRELAÇOS</strong>
+          <span class="small-text">Observação que conecta família e escola</span>
         </div>
         <nav class="nav-links">
           <a href="../index.html">Início</a>
@@ -40,7 +40,7 @@
           <dt>Relatório destinado a</dt>
           <dd>Família e escola indicadas no formulário</dd>
           <dt>Documentos-base</dt>
-          <dd>Referências pedagógicas e observações do cotidiano</dd>
+          <dd>BNCC, observações do cotidiano e referências pedagógicas da escola</dd>
           <dt>Finalidade</dt>
           <dd>Organizar observações sobre comunicação, linguagem e interação social.</dd>
           <dt>Funcionalidade da informação</dt>
@@ -50,7 +50,7 @@
 
       <section>
         <div class="info-box success">
-          <p>Após o preenchimento, um relatório será gerado e enviado por e-mail.</p>
+          <p>Após o preenchimento, um relatório será enviado por e-mail.</p>
         </div>
         <div class="info-box warning">
           <p>Este formulário não possui finalidade diagnóstica.</p>
@@ -58,8 +58,8 @@
       </section>
 
       <section>
-        <a class="button" href="#" data-alert="Formulário disponível em breve">
-          Acessar formulário (em breve)
+        <a class="button" href="#" data-alert="Formulário em breve. Em breve disponibilizaremos o link.">
+          Formulário em breve
         </a>
       </section>
     </main>
@@ -67,7 +67,7 @@
     <footer>
       <div class="container">
         <p class="small-text">
-          OBSERVA organiza registros observacionais para apoiar o planejamento educacional.
+          ENTRELAÇOS organiza registros observacionais para apoiar o planejamento educacional.
         </p>
         <div class="footer-links">
           <a href="index.html">Formulários</a>
